scss/_dropdown.scss
// The dropdown wrapper (`<div>`)
.dropup,
.dropright,
.dropdown,
.dropleft {
  position: relative;
}

.dropdown-toggle {
  white-space: nowrap;

  // Generate the caret automatically
  @include caret();
}

// The dropdown menu
.dropdown-menu {
  position: absolute;
  top: 100%;
  @include ltr {
    left: 0;
  }
  @include rtl {
    right: 0;
  }
  z-index: $zindex-dropdown;
  display: none; // none by default, but block on "open" of the menu
  float: left;
  min-width: $dropdown-min-width;
  padding: $dropdown-padding-y 0;
  margin: $dropdown-spacer 0 0; // override default ul
  @include font-size($dropdown-font-size);
  text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
  list-style: none;
  background-clip: padding-box;
  border: $dropdown-border-width solid;
  @include border-radius($dropdown-border-radius);
  @include box-shadow($dropdown-box-shadow);

  @include themes($dropdown-theme-map, $create: parent) {
    color: themes-get-value("dropdown-color");
    background-color: themes-get-value("dropdown-bg");
    border-color: themes-get-value("dropdown-border-color");
  }
  @include elevation(4);
}

@each $breakpoint in map-keys($grid-breakpoints) {
  @include media-breakpoint-up($breakpoint) {
    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);

    .dropdown-menu#{$infix}-left {
      @include ltr {
        right: auto;
        left: 0;
      }
      @include rtl {
        right: 0;
        left: auto;
      }
    }

    .dropdown-menu#{$infix}-right {
      @include ltr {
        right: 0;
        left: auto;
      }
      @include rtl {
        right: auto;
        left: 0;
      }
    }
  }
}

// Allow for dropdowns to go bottom up (aka, dropup-menu)
// Just add .dropup after the standard .dropdown class and you"re set.
.dropup {
  .dropdown-menu {
    top: auto;
    bottom: 100%;
    margin-top: 0;
    margin-bottom: $dropdown-spacer;
  }

  .dropdown-toggle {
    @include caret(up);
  }
}

.dropright {
  .dropdown-menu {
    top: 0;
    margin-top: 0;
    @include ltr {
      right: auto;
      left: 100%;
      margin-left: $dropdown-spacer;
    }
    @include rtl {
      right: 100%;
      left: auto;
      margin-right: $dropdown-spacer;
    }
  }

  .dropdown-toggle {
    @include caret(right);
    &::after {
      vertical-align: 0;
    }
  }
}

.dropleft {
  .dropdown-menu {
    top: 0;
    margin-top: 0;

    @include ltr {
      right: 100%;
      left: auto;
      margin-right: $dropdown-spacer;
    }
    @include rtl {
      right: auto;
      left: 100%;
      margin-left: $dropdown-spacer;
    }
  }

  .dropdown-toggle {
    @include caret(left);
    &::before {
      vertical-align: 0;
    }
  }
}

// When enabled Popper.js, reset basic dropdown position
// stylelint-disable-next-line no-duplicate-selectors
.dropdown-menu {
  &[x-placement^="top"],
  &[x-placement^="right"],
  &[x-placement^="bottom"],
  &[x-placement^="left"] {
    right: auto;
    bottom: auto;
  }
}

// Dividers (basically an `<hr>`) within the dropdown
.dropdown-divider {
  @include themes($dropdown-theme-map, $create: parent) {
    @include nav-divider(themes-get-value("dropdown-divider-bg"), $dropdown-divider-margin-y, true);
  }
}

// Links, buttons, and more within the dropdown menu
//
// `<button>`-specific styles are denoted with `// For <button>s`
.dropdown-item {
  display: flex;
  align-items: center;
  width: 100%; // For `<button>`s
  padding: $dropdown-item-padding-y $dropdown-item-padding-x;
  clear: both;
  font-weight: $font-weight-normal;
  text-align: inherit; // For `<button>`s
  white-space: nowrap; // prevent links from randomly breaking onto new lines
  background-color: transparent; // For `<button>`s
  border: 0; // For `<button>`s

  @include themes($dropdown-theme-map, $create: parent) {
    color: themes-get-value("dropdown-link-color");
  }

  // Prevent dropdown overflow if there"s no padding
  // See https://github.com/twbs/bootstrap/pull/27703
  @if $dropdown-padding-y == 0 {
    &:first-child {
      @include border-top-radius($dropdown-inner-border-radius);
    }

    &:last-child {
      @include border-bottom-radius($dropdown-inner-border-radius);
    }
  }

  @include hover-focus() {
    text-decoration: none;
    // @include gradient-bg($dropdown-link-hover-bg);

    @include themes($dropdown-theme-map, $create: parent) {
      color: themes-get-value("dropdown-link-hover-color");
      @include gradient-bg(themes-get-value("dropdown-link-hover-bg"));
    }
  }

  &.active,
  &:active {
    text-decoration: none;
    // @include gradient-bg($dropdown-link-active-bg);

    @include themes($dropdown-theme-map, $create: parent) {
      color: themes-get-value("dropdown-link-active-color");
      @include gradient-bg(themes-get-value("dropdown-link-active-bg"));
    }
  }

  &.disabled,
  &:disabled {
    pointer-events: none;
    background-color: transparent;
    // Remove CSS gradients if they're enabled
    @if $enable-gradients {
      background-image: none;
    }

    @include themes($dropdown-theme-map, $create: parent) {
      color: themes-get-value("dropdown-link-disabled-color");
    }
  }
}

.dropdown-menu.show {
  display: block;
}

// Dropdown section headers
.dropdown-header {
  display: block;
  padding: $dropdown-padding-y $dropdown-item-padding-x;
  margin-bottom: 0; // for use with heading elements
  @include font-size($font-size-sm);
  white-space: nowrap; // as with > li > a
  @include themes($dropdown-theme-map, $create: parent) {
    color: themes-get-value("dropdown-header-color");
  }
}

// Dropdown text
.dropdown-item-text {
  display: block;
  padding: $dropdown-item-padding-y $dropdown-item-padding-x;

  @include themes($dropdown-theme-map, $create: parent) {
    color: themes-get-value("dropdown-link-color");
  }
}

